--- a/index.html
+++ b/index.html
@@ -23,51 +23,52 @@
 <body>
     <div class="header"><a href="https://moooease.me">Mueez Ahmad</a></div>
     <div class="photos" id="next">
-        <div><img src="images/_DSF2784.jpg"></div>
-        <div><img src="images/_DSF2797.jpg"></div>
-        <div><img src="images/_DSF2081.jpg"></div>
-        <div><img src="images/_DSF2077.jpg"></div>
-        <div><img src="images/_DSF1869-2.jpg"></div>
-        <div><img src="images/_DSF1853-2.jpg"></div>
-        <div><img src="images/_DSF2088-2.jpg"></div>
-        <div><img src="images/_DSF1673-2.jpg"></div>
-        <div><img src="images/_DSF1732.jpg"></div>
-        <div><img src="images/_DSF1441.jpg"></div>
-        <div><img src="images/_DSF1380.jpg"></div>
-        <div><img src="images/_DSF1422-2.jpg"></div>
-        <div><img src="images/IMG_4742.jpg"></div>
-        <div><img src="images/IMG_4725.jpg"></div>
-        <div><img src="images/IMG_4590.jpg"></div>
-        <div><img src="images/IMG_4587.jpg"></div>
-        <div><img src="images/IMG_4518.jpg"></div>
-        <div><img src="images/IMG_4479.jpg"></div>
-        <div><img src="images/IMG_4435.jpg"></div>
-        <div><img src="images/IMG_4376.jpg"></div>
-        <div><img src="images/IMG_4359.jpg"></div>
-        <div><img src="images/IMG_4287.jpg"></div>
-        <div><img src="images/IMG_4212.jpg"></div>
-        <div><img src="images/IMG_4153.jpg"></div>
-        <div><img src="images/IMG_4083.jpg"></div>
-        <div><img src="images/IMG_9437.jpg"></div>
-        <div><img src="images/IMG_9295.jpg"></div>
-        <div><img src="images/IMG_9263.jpg"></div>
-        <div><img src="images/IMG_8920-2.jpg"></div>
-        <div><img src="images/IMG_8299.jpg"></div>
-        <div><img src="images/IMG_8190.jpg"></div>
-        <div><img src="images/IMG_8017.jpg"></div>
-        <div><img src="images/IMG_6517.jpg"></div>
-        <div><img src="images/IMG_6298.jpg"></div>
-        <div><img src="images/IMG_6294.jpg"></div>
-        <div><img src="images/IMG_6100.jpg"></div>
-        <div><img src="images/IMG_6089.jpg"></div>
-        <div><img src="images/IMG_0461.jpg"></div>
-        <div><img src="images/IMG_0435.jpg"></div>
-        <div><img src="images/IMG_0427.jpg"></div>
-        <div><img src="images/IMG_0403.jpg"></div>
-        <div><img src="images/IMG_0026.jpg"></div>
-        <div><img src="images/IMG_9940.jpg"></div>
-        <div><img src="images/IMG_8938.jpg"></div>
-        <div><img src="images/IMG_8937.jpg"></div>
+        <div><img src="images/-1.jpg"></div>
+        <div><img src="images/-2.jpg"></div>
+        <div><img src="images/-3.jpg"></div>
+        <div><img src="images/-4.jpg"></div>
+        <div><img src="images/-5.jpg"></div>
+        <div><img src="images/-6.jpg"></div>
+        <div><img src="images/-7.jpg"></div>
+        <div><img src="images/-8.jpg"></div>
+        <div><img src="images/-9.jpg"></div>
+        <div><img src="images/-10.jpg"></div>
+        <div><img src="images/-11.jpg"></div>
+        <div><img src="images/-12.jpg"></div>
+        <div><img src="images/-13.jpg"></div>
+        <div><img src="images/-14.jpg"></div>
+        <div><img src="images/-15.jpg"></div>
+        <div><img src="images/-16.jpg"></div>
+        <div><img src="images/-17.jpg"></div>
+        <div><img src="images/-18.jpg"></div>
+        <div><img src="images/-19.jpg"></div>
+        <div><img src="images/-20.jpg"></div>
+        <div><img src="images/-21.jpg"></div>
+        <div><img src="images/-22.jpg"></div>
+        <div><img src="images/-23.jpg"></div>
+        <div><img src="images/-24.jpg"></div>
+        <div><img src="images/-25.jpg"></div>
+        <div><img src="images/-26.jpg"></div>
+        <div><img src="images/-27.jpg"></div>
+        <div><img src="images/-28.jpg"></div>
+        <div><img src="images/-29.jpg"></div>
+        <div><img src="images/-30.jpg"></div>
+        <div><img src="images/-31.jpg"></div>
+        <div><img src="images/-32.jpg"></div>
+        <div><img src="images/-33.jpg"></div>
+        <div><img src="images/-34.jpg"></div>
+        <div><img src="images/-35.jpg"></div>
+        <div><img src="images/-36.jpg"></div>
+        <div><img src="images/-37.jpg"></div>
+        <div><img src="images/-38.jpg"></div>
+        <div><img src="images/-39.jpg"></div>
+        <div><img src="images/-40.jpg"></div>
+        <div><img src="images/-41.jpg"></div>
+        <div><img src="images/-42.jpg"></div>
+        <div><img src="images/-43.jpg"></div>
+        <div><img src="images/-44.jpg"></div>
+
+
     </div>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
