--- a/index.html
+++ b/index.html
@@ -23,51 +23,98 @@
 <body>
     <div class="header"><a href="https://moooease.me">Mueez Ahmad</a></div>
     <div class="photos" id="next">
-        <div><img src="images/1.jpg"></div>
-        <div><img src="images/2.jpg"></div>
-        <div><img src="images/3.jpg"></div>
-        <div><img src="images/4.jpg"></div>
-        <div><img src="images/5.jpg"></div>
-        <div><img src="images/6.jpg"></div>
-        <div><img src="images/7.jpg"></div>
-        <div><img src="images/8.jpg"></div>
-        <div><img src="images/9.jpg"></div>
-        <div><img src="images/10.jpg"></div>
-        <div><img src="images/11.jpg"></div>
-        <div><img src="images/12.jpg"></div>
-        <div><img src="images/13.jpg"></div>
-        <div><img src="images/14.jpg"></div>
-        <div><img src="images/15.jpg"></div>
-        <div><img src="images/16.jpg"></div>
-        <div><img src="images/17.jpg"></div>
-        <div><img src="images/18.jpg"></div>
-        <div><img src="images/19.jpg"></div>
-        <div><img src="images/20.jpg"></div>
-        <div><img src="images/21.jpg"></div>
-        <div><img src="images/22.jpg"></div>
-        <div><img src="images/23.jpg"></div>
-        <div><img src="images/24.jpg"></div>
-        <div><img src="images/25.jpg"></div>
-        <div><img src="images/26.jpg"></div>
-        <div><img src="images/27.jpg"></div>
-        <div><img src="images/28.jpg"></div>
-        <div><img src="images/29.jpg"></div>
-        <div><img src="images/30.jpg"></div>
-        <div><img src="images/31.jpg"></div>
-        <div><img src="images/32.jpg"></div>
-        <div><img src="images/33.jpg"></div>
-        <div><img src="images/34.jpg"></div>
-        <div><img src="images/35.jpg"></div>
-        <div><img src="images/36.jpg"></div>
-        <div><img src="images/37.jpg"></div>
-        <div><img src="images/38.jpg"></div>
-        <div><img src="images/39.jpg"></div>
-        <div><img src="images/40.jpg"></div>
-        <div><img src="images/41.jpg"></div>
-        <div><img src="images/42.jpg"></div>
-        <div><img src="images/43.jpg"></div>
-        <div><img src="images/44.jpg"></div>
 
+        <div><img src="images/44.jpg"></div>
+        <div><img src="images/43.jpg"></div>
+        <div><img src="images/42.jpg"></div>
+        <div><img src="images/41.jpg"></div>
+        <div><img src="images/40.jpg"></div>
+        <div><img src="images/39.jpg"></div>
+        <div><img src="images/38.jpg"></div>
+        <div><img src="images/37.jpg"></div>
+        <div><img src="images/36.jpg"></div>
+        <div><img src="images/35.jpg"></div>
+        <div><img src="images/34.jpg"></div>
+        <div><img src="images/33.jpg"></div>
+        <div><img src="images/32.jpg"></div>
+        <div><img src="images/31.jpg"></div>
+        <div><img src="images/30.jpg"></div>
+        <div><img src="images/29.jpg"></div>
+        <div><img src="images/28.jpg"></div>
+        <div><img src="images/27.jpg"></div>
+        <div><img src="images/26.jpg"></div>
+        <div><img src="images/25.jpg"></div>
+        <div><img src="images/24.jpg"></div>
+        <div><img src="images/23.jpg"></div>
+        <div><img src="images/22.jpg"></div>
+        <div><img src="images/21.jpg"></div>
+        <div><img src="images/20.jpg"></div>
+        <div><img src="images/19.jpg"></div>
+        <div><img src="images/18.jpg"></div>
+        <div><img src="images/17.jpg"></div>
+        <div><img src="images/16.jpg"></div>
+        <div><img src="images/15.jpg"></div>
+        <div><img src="images/14.jpg"></div>
+        <div><img src="images/13.jpg"></div>
+        <div><img src="images/12.jpg"></div>
+        <div><img src="images/11.jpg"></div>
+        <div><img src="images/10.jpg"></div>
+        <div><img src="images/9.jpg"></div>
+        <div><img src="images/8.jpg"></div>
+        <div><img src="images/7.jpg"></div>
+        <div><img src="images/6.jpg"></div>
+        <div><img src="images/5.jpg"></div>
+        <div><img src="images/4.jpg"></div>
+        <div><img src="images/3.jpg"></div>
+        <div><img src="images/2.jpg"></div>
+        <div><img src="images/1.jpg"></div>
+
+    </div>
+    <div class="slider-nav">
+            <div><img class="image-nav" src="images/44.jpg"></div>
+            <div><img class="image-nav" src="images/43.jpg"></div>
+            <div><img class="image-nav" src="images/42.jpg"></div>
+            <div><img class="image-nav" src="images/41.jpg"></div>
+            <div><img class="image-nav" src="images/40.jpg"></div>
+            <div><img class="image-nav" src="images/39.jpg"></div>
+            <div><img class="image-nav" src="images/38.jpg"></div>
+            <div><img class="image-nav" src="images/37.jpg"></div>
+            <div><img class="image-nav" src="images/36.jpg"></div>
+            <div><img class="image-nav" src="images/35.jpg"></div>
+            <div><img class="image-nav" src="images/34.jpg"></div>
+            <div><img class="image-nav" src="images/33.jpg"></div>
+            <div><img class="image-nav" src="images/32.jpg"></div>
+            <div><img class="image-nav" src="images/31.jpg"></div>
+            <div><img class="image-nav" src="images/30.jpg"></div>
+            <div><img class="image-nav" src="images/29.jpg"></div>
+            <div><img class="image-nav" src="images/28.jpg"></div>
+            <div><img class="image-nav" src="images/27.jpg"></div>
+            <div><img class="image-nav" src="images/26.jpg"></div>
+            <div><img class="image-nav" src="images/25.jpg"></div>
+            <div><img class="image-nav" src="images/24.jpg"></div>
+            <div><img class="image-nav" src="images/23.jpg"></div>
+            <div><img class="image-nav" src="images/22.jpg"></div>
+            <div><img class="image-nav" src="images/21.jpg"></div>
+            <div><img class="image-nav" src="images/20.jpg"></div>
+            <div><img class="image-nav" src="images/19.jpg"></div>
+            <div><img class="image-nav" src="images/18.jpg"></div>
+            <div><img class="image-nav" src="images/17.jpg"></div>
+            <div><img class="image-nav" src="images/16.jpg"></div>
+            <div><img class="image-nav" src="images/15.jpg"></div>
+            <div><img class="image-nav" src="images/14.jpg"></div>
+            <div><img class="image-nav" src="images/13.jpg"></div>
+            <div><img class="image-nav" src="images/12.jpg"></div>
+            <div><img class="image-nav" src="images/11.jpg"></div>
+            <div><img class="image-nav" src="images/10.jpg"></div>
+            <div><img class="image-nav" src="images/9.jpg"></div>
+            <div><img class="image-nav" src="images/8.jpg"></div>
+            <div><img class="image-nav" src="images/7.jpg"></div>
+            <div><img class="image-nav" src="images/6.jpg"></div>
+            <div><img class="image-nav" src="images/5.jpg"></div>
+            <div><img class="image-nav" src="images/4.jpg"></div>
+            <div><img class="image-nav" src="images/3.jpg"></div>
+            <div><img class="image-nav" src="images/2.jpg"></div>
+            <div><img class="image-nav" src="images/1.jpg"></div>
 
     </div>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -83,6 +130,18 @@
                 fade: true,
                 cssEase: 'linear',
                 accessibility: true
+            });
+            $('.slider-nav').slick({
+                slidesToShow: 6,
+                slidesToScroll: 1,
+                infinite: true,
+                asNavFor: '.photos',
+                arrows: false,
+                dots: false,
+                centerMode: true,
+                centerPadding: '60px',
+                focusOnSelect: true,
+                variableWidth: true
             });
             $("#next").click(function () {
                 $('.photos').slick('slickNext');
