--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Photos &middot; Moooease</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.typekit.net/jnv2vkj.css">
+    <link href="https://fonts.googleapis.com/css?family=Averia+Sans+Libre|Mirza" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
