--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Photos &middot; Moooease</title>
+    <title>Photos &middot; Mueez</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.typekit.net/jnv2vkj.css">
     <link href="https://fonts.googleapis.com/css?family=Averia+Sans+Libre|Mirza" rel="stylesheet">
