--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 </head>
 
 <body>
+  <div class="loader">
+            <div class="spinner"></div>
+    </div>
     <div class="header"><a href="https://moooease.me">Mueez Ahmad</a></div>
     <div class="photos" id="next">
 
@@ -148,6 +151,13 @@
                 $('.photos').slick('slickNext');
             });
         });
+    </script>
+    <script type="text/javascript">
+        window.addEventListener("load", function () {
+            const loader = document.querySelector(".loader");
+            loader.className += " hidden";
+        })
+
     </script>
 </body>
 
