--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="loader">
             <div class="spinner"></div>
     </div>
-    <div class="header"><a href="https://moooease.me">Mueez Ahmad</a></div>
+    <div class="header"><a href="https://mueez.me" target="_blank">Mueez Ahmad</a></div>
     <div class="photos" id="next">
 
         <div><img src="images/44.jpg"></div>
