--- a/index.html
+++ b/index.html
@@ -22,10 +22,24 @@
 </head>
 
 <body>
-  <div class="loader">
-            <div class="spinner"></div>
+    <div class="loader">
+        <div class="spinner"></div>
     </div>
-    <div class="header"><a href="https://mueez.me" target="_blank">Mueez Ahmad</a></div>
+    <div id="overlay" onclick="off()">
+        <div class="overlaydesc">
+            <p>a web developer and photographer</p> 
+            <br>
+            <p><a href="https://mueez.me" target="_blank">mueez.me</a></p>
+            <p><a href="mailto:hello@mueez.me?Subject=Hi!" target="_blank">hello@mueez.me</a></p>
+            <p>621-812-2490</p>
+            <br>
+            <br>
+
+        </div>
+    </div>
+
+
+    <div class="header" onclick="on()"><a href="#">Mueez Ahmad</a></div>
     <div class="photos" id="next">
 
         <div><img src="images/44.jpg"></div>
@@ -75,50 +89,50 @@
 
     </div>
     <div class="slider-nav">
-            <div><img class="image-nav" src="images/44.jpg"></div>
-            <div><img class="image-nav" src="images/43.jpg"></div>
-            <div><img class="image-nav" src="images/42.jpg"></div>
-            <div><img class="image-nav" src="images/41.jpg"></div>
-            <div><img class="image-nav" src="images/40.jpg"></div>
-            <div><img class="image-nav" src="images/39.jpg"></div>
-            <div><img class="image-nav" src="images/38.jpg"></div>
-            <div><img class="image-nav" src="images/37.jpg"></div>
-            <div><img class="image-nav" src="images/36.jpg"></div>
-            <div><img class="image-nav" src="images/35.jpg"></div>
-            <div><img class="image-nav" src="images/34.jpg"></div>
-            <div><img class="image-nav" src="images/33.jpg"></div>
-            <div><img class="image-nav" src="images/32.jpg"></div>
-            <div><img class="image-nav" src="images/31.jpg"></div>
-            <div><img class="image-nav" src="images/30.jpg"></div>
-            <div><img class="image-nav" src="images/29.jpg"></div>
-            <div><img class="image-nav" src="images/28.jpg"></div>
-            <div><img class="image-nav" src="images/27.jpg"></div>
-            <div><img class="image-nav" src="images/26.jpg"></div>
-            <div><img class="image-nav" src="images/25.jpg"></div>
-            <div><img class="image-nav" src="images/24.jpg"></div>
-            <div><img class="image-nav" src="images/23.jpg"></div>
-            <div><img class="image-nav" src="images/22.jpg"></div>
-            <div><img class="image-nav" src="images/21.jpg"></div>
-            <div><img class="image-nav" src="images/20.jpg"></div>
-            <div><img class="image-nav" src="images/19.jpg"></div>
-            <div><img class="image-nav" src="images/18.jpg"></div>
-            <div><img class="image-nav" src="images/17.jpg"></div>
-            <div><img class="image-nav" src="images/16.jpg"></div>
-            <div><img class="image-nav" src="images/15.jpg"></div>
-            <div><img class="image-nav" src="images/14.jpg"></div>
-            <div><img class="image-nav" src="images/13.jpg"></div>
-            <div><img class="image-nav" src="images/12.jpg"></div>
-            <div><img class="image-nav" src="images/11.jpg"></div>
-            <div><img class="image-nav" src="images/10.jpg"></div>
-            <div><img class="image-nav" src="images/9.jpg"></div>
-            <div><img class="image-nav" src="images/8.jpg"></div>
-            <div><img class="image-nav" src="images/7.jpg"></div>
-            <div><img class="image-nav" src="images/6.jpg"></div>
-            <div><img class="image-nav" src="images/5.jpg"></div>
-            <div><img class="image-nav" src="images/4.jpg"></div>
-            <div><img class="image-nav" src="images/3.jpg"></div>
-            <div><img class="image-nav" src="images/2.jpg"></div>
-            <div><img class="image-nav" src="images/1.jpg"></div>
+        <div><img class="image-nav" src="images/44.jpg"></div>
+        <div><img class="image-nav" src="images/43.jpg"></div>
+        <div><img class="image-nav" src="images/42.jpg"></div>
+        <div><img class="image-nav" src="images/41.jpg"></div>
+        <div><img class="image-nav" src="images/40.jpg"></div>
+        <div><img class="image-nav" src="images/39.jpg"></div>
+        <div><img class="image-nav" src="images/38.jpg"></div>
+        <div><img class="image-nav" src="images/37.jpg"></div>
+        <div><img class="image-nav" src="images/36.jpg"></div>
+        <div><img class="image-nav" src="images/35.jpg"></div>
+        <div><img class="image-nav" src="images/34.jpg"></div>
+        <div><img class="image-nav" src="images/33.jpg"></div>
+        <div><img class="image-nav" src="images/32.jpg"></div>
+        <div><img class="image-nav" src="images/31.jpg"></div>
+        <div><img class="image-nav" src="images/30.jpg"></div>
+        <div><img class="image-nav" src="images/29.jpg"></div>
+        <div><img class="image-nav" src="images/28.jpg"></div>
+        <div><img class="image-nav" src="images/27.jpg"></div>
+        <div><img class="image-nav" src="images/26.jpg"></div>
+        <div><img class="image-nav" src="images/25.jpg"></div>
+        <div><img class="image-nav" src="images/24.jpg"></div>
+        <div><img class="image-nav" src="images/23.jpg"></div>
+        <div><img class="image-nav" src="images/22.jpg"></div>
+        <div><img class="image-nav" src="images/21.jpg"></div>
+        <div><img class="image-nav" src="images/20.jpg"></div>
+        <div><img class="image-nav" src="images/19.jpg"></div>
+        <div><img class="image-nav" src="images/18.jpg"></div>
+        <div><img class="image-nav" src="images/17.jpg"></div>
+        <div><img class="image-nav" src="images/16.jpg"></div>
+        <div><img class="image-nav" src="images/15.jpg"></div>
+        <div><img class="image-nav" src="images/14.jpg"></div>
+        <div><img class="image-nav" src="images/13.jpg"></div>
+        <div><img class="image-nav" src="images/12.jpg"></div>
+        <div><img class="image-nav" src="images/11.jpg"></div>
+        <div><img class="image-nav" src="images/10.jpg"></div>
+        <div><img class="image-nav" src="images/9.jpg"></div>
+        <div><img class="image-nav" src="images/8.jpg"></div>
+        <div><img class="image-nav" src="images/7.jpg"></div>
+        <div><img class="image-nav" src="images/6.jpg"></div>
+        <div><img class="image-nav" src="images/5.jpg"></div>
+        <div><img class="image-nav" src="images/4.jpg"></div>
+        <div><img class="image-nav" src="images/3.jpg"></div>
+        <div><img class="image-nav" src="images/2.jpg"></div>
+        <div><img class="image-nav" src="images/1.jpg"></div>
 
     </div>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -158,6 +172,15 @@
             loader.className += " hidden";
         })
 
+    </script>
+    <script>
+        function on() {
+            document.getElementById("overlay").style.display = "block";
+        }
+
+        function off() {
+            document.getElementById("overlay").style.display = "none";
+        }
     </script>
 </body>
 
