updating link colors and overlay

--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
     </div>
     <div id="overlay" onclick="off()">
         <div class="overlaydesc">
-            <p>a web developer and photographer</p> 
-            <br>
             <p><a href="https://mueez.me" target="_blank">mueez.me</a></p>
             <p><a href="mailto:hello@mueez.me?Subject=Hi!" target="_blank">hello@mueez.me</a></p>
             <p>621-812-2490</p>
-            <br>
+            <p><span style="color:#1440d1;">@moooease</span> everywhere else</p>
             <br>
 
         </div>
